switched to ANTLR's built-in XPath. meh.